html, body {     width: 100%;     height: 100%; common fix

--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
         <link rel="stylesheet" href="css/buttons.css">
         <link rel="stylesheet" href="css/lines.css">
         <link rel="stylesheet" href="css/images.css">
-        <!--<link rel="stylesheet" href="css/forms.css">-->
+        <link rel="stylesheet" href="css/forms.css">
         <link rel="stylesheet" href="css/lists.css">
         <link rel="stylesheet" href="css/menus.css">
         <link rel="stylesheet" href="css/customs.css">
-
-
-
         <!--My styles ( end ) -->
-
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
