--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <link rel="stylesheet" href="css/wrappers.css">
         <link rel="stylesheet" href="css/grid.css">
         <link rel="stylesheet" href="css/fonts.css">
+        <link rel="stylesheet" href="css/text.css">
         <link rel="stylesheet" href="css/elements-dimensions.css">
         <link rel="stylesheet" href="css/elements-background-colors.css">
         <link rel="stylesheet" href="css/elements-background-images.css">
-        <link rel="stylesheet" href="css/text.css">
-        <link rel="stylesheet" href="css/links.css">
-        <link rel="stylesheet" href="css/buttons.css">
-        <link rel="stylesheet" href="css/lines.css">
         <link rel="stylesheet" href="css/images.css">
         <link rel="stylesheet" href="css/forms.css">
         <link rel="stylesheet" href="css/lists.css">
         <link rel="stylesheet" href="css/menus.css">
+        <link rel="stylesheet" href="css/links.css">
+        <link rel="stylesheet" href="css/buttons.css">
+        <link rel="stylesheet" href="css/geometric-shapes.css">
         <link rel="stylesheet" href="css/customs.css">
         <!--My styles ( end ) -->
 
