add clearfix for section-2

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </section>
             <section class="section-2">
                 <div class="wrapper-alignment-center-childs">
-                    <ul class="section-2-list">
+                    <ul class="section-2-list clearfix">
                         <li class="section-2-item grid-2">
                             <div class="wrapper-margin">
                                 <div class="wrapper-img-h-170">
